--- a/spms/administrator/templates/base.html
+++ b/spms/administrator/templates/base.html
@@ -32,7 +32,7 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{% url 'adminDashboard' %}">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{% url 'admindashboard' %}">
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-laugh-wink"></i>
                 </div>
@@ -44,7 +44,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item {% if page == 'Dashboard' %}active{% endif %}">
-                <a class="nav-link" href="{% url 'adminDashboard' %}">
+                <a class="nav-link" href="{% url 'admindashboard' %}">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Dashboard</span></a>
             </li>
@@ -59,13 +59,13 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item {% if page == 'Students' %}active{% endif %}">
-                <a class="nav-link" href="{% url 'studentList' %}">
+                <a class="nav-link" href="{% url 'studentlist' %}">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Students</span></a>
             </li>
             <!-- Nav Item - Pages Collapse Menu -->
             {% comment %} <li class="nav-item {% if page == 'Students' %}active{% endif %}">
-                <a class="nav-link collapsed" href="{% url 'studentList' %}" data-toggle="collapse" data-target="#collapseTwo"
+                <a class="nav-link collapsed" href="{% url 'studentlist' %}" data-toggle="collapse" data-target="#collapseTwo"
                     aria-expanded="true" aria-controls="collapseTwo">
                     <i class="fas fa-fw fa-cog"></i>
                     <span>Students</span>
@@ -274,9 +274,9 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Douglas McGee</span>
+                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{user.username}}</span>
                                 <img class="img-profile rounded-circle"
-                                    src="{% static 'img/undraw_profile.svg' %}">
+                                    src="{% static 'img/profile.png' %}">
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
@@ -345,7 +345,7 @@
                 <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="login.html">Logout</a>
+                    <a class="btn btn-primary" href="{% url 'logout' %}">Logout</a>
                 </div>
             </div>
         </div>
