--- a/spms/administrator/templates/students.html
+++ b/spms/administrator/templates/students.html
@@ -7,7 +7,7 @@
     <!-- Page Heading -->
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
         <h1 class="h3 mb-2 text-gray-800">Students</h1>
-        <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
+        <a href="{% url 'addstudent' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
                 class="fas fa-download fa-sm text-white-50"></i> Add Student</a>
     </div>
 
@@ -44,11 +44,11 @@
                         <tr>
                             <td>{{ student.registration_number }}</td>
                             <td>{{ student.user__first_name }} {{ student.user__last_name }}</td>
-                            <td>{{ student.family__guardian__user__first_name }}{{ student.family__guardian__user__last_name }}</td>
+                            <td>{{ student.family__guardian_id__user__first_name }} {{ student.family__guardian_id__user__last_name }}</td>
                             <td>{{ student.gender }}</td>
                             <td>{{ student.class }} - {{ student.section }}</td>
                             <td>
-                                <a href="{% url 'studentDetail' student.id %}" class="btn btn-primary btn-sm">View</a>
+                                <a href="{% url 'studentdetail' student.id %}" class="btn btn-primary btn-sm">View</a>
                             </td>
                         </tr>
                         {% endfor %}
@@ -59,6 +59,5 @@
     </div>
 
 </div>
-<!-- /.container-fluid -->
 <!-- /.container-fluid -->
 {% endblock %}
