Final Commit till 25-11-2024

--- a/spms/administrator/templates/students.html
+++ b/spms/administrator/templates/students.html
@@ -8,7 +8,7 @@
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
         <h1 class="h3 mb-2 text-gray-800">Students</h1>
         <a href="{% url 'addstudent' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
-                class="fas fa-download fa-sm text-white-50"></i> Add Student</a>
+            class="fas fa-user-plus fa-sm text-white-50"></i> New Admission</a>
     </div>
 
     <!-- DataTales Example -->
