--- a/spms/administrator/templates/base.html
+++ b/spms/administrator/templates/base.html
@@ -18,6 +18,7 @@
         rel="stylesheet">
 
     <!-- Custom styles for this template-->
+    <link href="{% static 'css/custom.css' %}" rel="stylesheet">
     <link href="{% static 'css/sb-admin-2.min.css' %}" rel="stylesheet">
     <link href="{% static 'vendor/datatables/dataTables.bootstrap4.min.css' %}" rel="stylesheet">
 
@@ -57,11 +58,38 @@
                 Students
             </div>
 
-            <!-- Nav Item - Dashboard -->
+            <!-- Nav Item - Students -->
             <li class="nav-item {% if page == 'Students' %}active{% endif %}">
                 <a class="nav-link" href="{% url 'studentlist' %}">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Students</span></a>
+            </li>
+
+            <!-- Divider -->
+            <hr class="sidebar-divider">
+
+            <!-- Heading -->
+            <div class="sidebar-heading">
+                Academics
+            </div>
+
+            <!-- Nav Item - Classes -->
+            <li class="nav-item {% if page == 'Class' %}active{% endif %}">
+                <a class="nav-link" href="{% url 'class_list' %}">
+                    <i class="fas fa-chalkboard"></i>
+                    <span>Class</span></a>
+            </li>
+            <!-- Nav Item - Sections -->
+            <li class="nav-item {% if page == 'Section' %}active{% endif %}">
+                <a class="nav-link" href="{% url 'section_list' %}">
+                    <i class="fas fa-columns"></i>
+                    <span>Section</span></a>
+            </li>
+            <!-- Nav Item - Subjects -->
+            <li class="nav-item {% if page == 'Subject' %}active{% endif %}">
+                <a class="nav-link" href="{% url 'subject_list' %}">
+                    <i class="fas fa-book"></i>
+                    <span>Subject</span></a>
             </li>
             <!-- Nav Item - Pages Collapse Menu -->
             {% comment %} <li class="nav-item {% if page == 'Students' %}active{% endif %}">
@@ -370,6 +398,7 @@
     <script src="{% static 'js/demo/chart-area-demo.js' %}"></script>
     <script src="{% static 'js/demo/chart-pie-demo.js' %}"></script>
     <script src="{% static 'js/demo/datatables-demo.js' %}"></script>
+    <script src="{% static 'js/script.js' %}"></script>
 
 </body>
 
