--- a/spms/administrator/templates/base.html
+++ b/spms/administrator/templates/base.html
@@ -86,26 +86,26 @@
                     <span>Section</span></a>
             </li>
             <!-- Nav Item - Subjects -->
-            <li class="nav-item {% if page == 'Subject' %}active{% endif %}">
+            {% comment %} <li class="nav-item {% if page == 'Subject' %}active{% endif %}">
                 <a class="nav-link" href="{% url 'subject_list' %}">
                     <i class="fas fa-book"></i>
                     <span>Subject</span></a>
-            </li>
-            <!-- Nav Item - Pages Collapse Menu -->
-            {% comment %} <li class="nav-item {% if page == 'Students' %}active{% endif %}">
-                <a class="nav-link collapsed" href="{% url 'studentlist' %}" data-toggle="collapse" data-target="#collapseTwo"
+            </li> {% endcomment %}
+
+            <!-- Nav Item - Subjects Menu -->
+            <li class="nav-item {% if page == 'Subject' %}active{% endif %}">
+                <a class="nav-link collapsed" href="{% url 'subject_list' %}" data-toggle="collapse" data-target="#collapseTwo"
                     aria-expanded="true" aria-controls="collapseTwo">
-                    <i class="fas fa-fw fa-cog"></i>
-                    <span>Students</span>
+                    <i class="fas fa-book"></i>
+                    <span>Subject</span>
                 </a>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Custom Components:</h6>
-                        <a class="collapse-item" href="buttons.html">Buttons</a>
-                        <a class="collapse-item" href="cards.html">Cards</a>
+                        <h6 class="collapse-header">Component:</h6>
+                        <a class="collapse-item" href="{% url 'class_subject_list' %}">Class Subjects</a>
                     </div>
                 </div>
-            </li> {% endcomment %}
+            </li>
 
             <!-- Divider -->
             <hr class="sidebar-divider">
