--- a/spms/administrator/templates/list_sections.html
+++ b/spms/administrator/templates/list_sections.html
@@ -11,6 +11,29 @@
             class="fas fa-columns fa-sm text-white-50"></i> Add New Section</a>
     </div>
 
+    <!-- Display messages -->
+    {% if messages %}
+        {% for message in messages %}
+            {% if message.tags == "error" %}
+                <div class="alert alert-danger">
+                    <p>{{ message }}</p>
+                </div>
+            {% elif message.tags == "success" %}
+                <div class="alert alert-success">
+                    <p>{{ message }}</p>
+                </div>
+            {% elif message.tags == "warning" %}
+                <div class="alert alert-warning">
+                    <p>{{ message }}</p>
+                </div>
+            {% elif message.tags == "info" %}
+                <div class="alert alert-info">
+                    <p>{{ message }}</p>
+                </div>
+            {% endif %}
+        {% endfor %}
+    {% endif %}
+
     <!-- DataTales Example -->
     <div class="card shadow mb-4">
         <div class="card-header py-3">
@@ -22,8 +45,8 @@
                     <thead>
                         <tr>
                             <th>ID#</th>
-                            <th>Class Name</th>
-                            <th>Section Name</th>
+                            <th>Section</th>
+                            <th>Class</th>
                             <th>Section Description</th>
                             <th>Action</th>
                         </tr>
@@ -31,8 +54,8 @@
                     <tfoot>
                         <tr>
                             <th>ID#</th>
-                            <th>Class Name</th>
-                            <th>Section Name</th>
+                            <th>Section</th>
+                            <th>Class</th>
                             <th>Section Description</th>
                             <th>Action</th>
                         </tr>
@@ -41,12 +64,15 @@
                         {% for section in sections %}
                             <tr>
                                 <td>{{ section.id }}</td>
-                                <td>{{ section.class_name }}</td>
                                 <td>{{ section.name }}</td>
+                                <td>{{ section.class_name }}</td>
                                 <td>{{ section.description }}</td>
                                 <td>
-                                    <a href="{% url 'update_class' section.id %}">Edit</a>
-                                    <a href="{% url 'delete_class' section.id %}">Delete</a>
+                                    <a href="{% url 'update_section' section.id %}" class="btn btn-sm btn-primary">Edit</a>
+                                    <button class="btn btn-sm btn-secondary" onclick="confirmDelete({{ section.id }})">Delete</button>
+                                    <form id="delete-form-{{ section.id }}" action="{% url 'delete_section' section.id %}" method="POST" style="display: none;">
+                                        {% csrf_token %}
+                                    </form>
                                 </td>
                             </tr>
                         {% endfor %}
@@ -57,4 +83,14 @@
     </div>
 </div>
 <!-- /.container-fluid -->
+
+<!-- Confirmation Script -->
+<script>
+    function confirmDelete(classId) {
+        const confirmed = confirm("Deleting section will delete all it's associated items, Are you sure you want to delete this Section?");
+        if (confirmed) {
+            document.getElementById(`delete-form-${classId}`).submit();
+        }
+    }
+</script>
 {% endblock %}
