--- a/spms/administrator/templates/list_subjects.html
+++ b/spms/administrator/templates/list_subjects.html
@@ -11,6 +11,29 @@
             class="fas fa-graduation-cap fa-sm text-white-50"></i> Add New Subject</a>
     </div>
 
+    <!-- Display messages -->
+    {% if messages %}
+        {% for message in messages %}
+            {% if message.tags == "error" %}
+                <div class="alert alert-danger">
+                    <p>{{ message }}</p>
+                </div>
+            {% elif message.tags == "success" %}
+                <div class="alert alert-success">
+                    <p>{{ message }}</p>
+                </div>
+            {% elif message.tags == "warning" %}
+                <div class="alert alert-warning">
+                    <p>{{ message }}</p>
+                </div>
+            {% elif message.tags == "info" %}
+                <div class="alert alert-info">
+                    <p>{{ message }}</p>
+                </div>
+            {% endif %}
+        {% endfor %}
+    {% endif %}
+
     <!-- DataTales Example -->
     <div class="card shadow mb-4">
         <div class="card-header py-3">
@@ -42,8 +65,11 @@
                                 <td>{{ subject.name }}</td>
                                 <td>{{ subject.description }}</td>
                                 <td>
-                                    <a href="{% url 'update_subject' subject.id %}">Edit</a>
-                                    <a href="{% url 'delete_subject' subject.id %}">Delete</a>
+                                    <a href="{% url 'update_subject' subject.id %}" class="btn btn-sm btn-primary">Edit</a>
+                                    <button class="btn btn-sm btn-secondary" onclick="confirmDelete({{ subject.id }})">Delete</button>
+                                    <form id="delete-form-{{ subject.id }}" action="{% url 'delete_subject' subject.id %}" method="POST" style="display: none;">
+                                        {% csrf_token %}
+                                    </form>
                                 </td>
                             </tr>
                         {% endfor %}
@@ -54,4 +80,14 @@
     </div>
 </div>
 <!-- /.container-fluid -->
+
+<!-- Confirmation Script -->
+<script>
+    function confirmDelete(classId) {
+        const confirmed = confirm("Deleting subject will delete all it's associated items, Are you sure you want to delete this subject?");
+        if (confirmed) {
+            document.getElementById(`delete-form-${classId}`).submit();
+        }
+    }
+</script>
 {% endblock %}
