--- a/spms/administrator/templates/list_class_subject.html
+++ b/spms/administrator/templates/list_class_subject.html
@@ -8,7 +8,7 @@
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
         <h1 class="h3 mb-2 text-gray-800">Class - Subject</h1>
         <a href="{% url 'add_class_subject' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
-            <i class="fas fa-chalkboard-teacher fa-sm text-white-50"></i> Add New Subject
+            <i class="fas fa-chalkboard-teacher fa-sm text-white-50"></i> Edit Subject List
         </a>
     </div>
 
@@ -38,7 +38,7 @@
     <!-- DataTales Example -->
     <div class="card shadow mb-4">
         <div class="card-header py-3">
-            <h6 class="m-0 font-weight-bold text-primary">All Classes</h6>
+            <h6 class="m-0 font-weight-bold text-primary">All Subjects</h6>
         </div>
         <div class="card-body">
             <div class="table-responsive">
@@ -74,15 +74,11 @@
                                                 {{ section_subject.subject.name }}{% if not forloop.last %}, {% endif %}
                                             {% endfor %}
                                         {% else %}
-                                            No subjects
+                                            No subjects added
                                         {% endif %}
                                     </td>
                                     <td>
-                                        <a href="{% url 'update_class' section.id %}" class="btn btn-sm btn-primary">Edit</a>
-                                        <button class="btn btn-sm btn-secondary" onclick="confirmDelete({{ section.id }})">Delete</button>
-                                        <form id="delete-form-{{ section.id }}" action="{% url 'delete_class' section.id %}" method="POST" style="display: none;">
-                                            {% csrf_token %}
-                                        </form>
+                                        <a href="{% url 'clear_class_subject' section.id %}" onclick="return confirmDelete({{ section.id }})" class="btn btn-sm btn-primary">Clear</a>
                                     </td>
                                 </tr>
                             {% endfor %}
@@ -97,10 +93,12 @@
 
 <!-- Confirmation Script -->
 <script>
-    function confirmDelete(classId) {
-        const confirmed = confirm("Deleting class will delete all it's associated items, Are you sure you want to remove all subjects from that class?");
+    function confirmDelete(sectionId) {
+        const confirmed = confirm("Are you sure you want to clear all subjects for this section?");
         if (confirmed) {
-            document.getElementById(`delete-form-${classId}`).submit();
+            return true;
+        } else {
+            return false;
         }
     }
 </script>
