--- a/spms/administrator/templates/add_update_class_subject.html
+++ b/spms/administrator/templates/add_update_class_subject.html
@@ -78,7 +78,7 @@
         </div>
 
         <!-- Submit and Cancel Buttons -->
-        <button type="submit" class="btn btn-primary">{% if obj %} Update {% else %} Submit {% endif %}</button>
+        <button type="submit" class="btn btn-danger">{% if obj %} Update {% else %} Submit {% endif %}</button>
         <a href="{% url 'class_subject_list' %}" class="btn btn-secondary ml-2">Cancel</a>
     </form>
 </div>
