--- a/spms/administrator/templates/add_update_section.html
+++ b/spms/administrator/templates/add_update_section.html
@@ -58,7 +58,7 @@
         </div>
 
         <!-- Submit and Cancel Buttons -->
-        <button type="submit" class="btn btn-primary">{% if section_obj %} Update {% else %} Submit {% endif %}</button>
+        <button type="submit" class="btn btn-danger">{% if section_obj %} Update {% else %} Submit {% endif %}</button>
         <a href="{% url 'section_list' %}" class="btn btn-secondary ml-2">Cancel</a>
     </form>
 </div>
