--- a/spms/administrator/templates/add_update_student.html
+++ b/spms/administrator/templates/add_update_student.html
@@ -247,7 +247,7 @@
         </div>
 
         <!-- Submit and Cancel Buttons -->
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-danger">Submit</button>
         <a href="{% url 'studentlist' %}" class="btn btn-secondary">Cancel</a>
     </form>
 </div>
