--- a/spms/home/templates/home.html
+++ b/spms/home/templates/home.html
@@ -47,7 +47,7 @@
                 <img src="{% static 'img/logo.png' %}" alt="School Logo" class="img-fluid" style="height: 50px;">
                 <span class="ms-2 h3">SPMS</span>
             </a>
-            <a href="{% url 'login' %}" class="btn btn-primary">Login</a>
+            <a href="{% url 'login' %}" class="btn btn-danger">Login</a>
         </div>
     </header>
 
@@ -97,7 +97,7 @@
                 <div class="col-md-4">
                     <h5>Contact Us</h5>
                     <p>Feel free to reach out to us for any inquiries or concerns.</p>
-                    <a href="mailto:contact@school.com" class="btn btn-outline-primary">Email Us</a>
+                    <a href="mailto:contact@school.com" class="btn btn-outline-danger">Email Us</a>
                 </div>
             </div>
             <p class="mt-4">School Management System &copy; 2024</p>
