--- a/spms/administrator/templates/add_school_session.html
+++ b/spms/administrator/templates/add_school_session.html
@@ -7,7 +7,7 @@
     <form method="post" action="{% url 'add_school_session' %}">
         {% csrf_token %}
         {{ form.as_p }}  <!-- Renders the form as paragraphs -->
-        <button type="submit" class="btn btn-primary">Save</button>
+        <button type="submit" class="btn btn-danger">Save</button>
     </form>
 </div>
 {% endblock %}
