--- a/spms/administrator/templates/list_class_subject.html
+++ b/spms/administrator/templates/list_class_subject.html
@@ -7,7 +7,7 @@
     <!-- Page Heading -->
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
         <h1 class="h3 mb-2 text-gray-800">Class - Subject</h1>
-        <a href="{% url 'add_class_subject' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+        <a href="{% url 'add_class_subject' %}" class="d-none d-sm-inline-block btn btn-sm btn-danger shadow-sm">
             <i class="fas fa-chalkboard-teacher fa-sm text-white-50"></i> Edit Subject List
         </a>
     </div>
@@ -38,7 +38,7 @@
     <!-- DataTales Example -->
     <div class="card shadow mb-4">
         <div class="card-header py-3">
-            <h6 class="m-0 font-weight-bold text-primary">All Subjects</h6>
+            <h6 class="m-0 font-weight-bold text-danger">All Subjects</h6>
         </div>
         <div class="card-body">
             <div class="table-responsive">
@@ -78,7 +78,7 @@
                                         {% endif %}
                                     </td>
                                     <td>
-                                        <a href="{% url 'clear_class_subject' section.id %}" onclick="return confirmDelete({{ section.id }})" class="btn btn-sm btn-primary">Clear</a>
+                                        <a href="{% url 'clear_class_subject' section.id %}" onclick="return confirmDelete({{ section.id }})" class="btn btn-sm btn-danger">Clear</a>
                                     </td>
                                 </tr>
                             {% endfor %}
