--- a/spms/administrator/templates/list_sections.html
+++ b/spms/administrator/templates/list_sections.html
@@ -7,7 +7,7 @@
     <!-- Page Heading -->
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
         <h1 class="h3 mb-2 text-gray-800">Section</h1>
-        <a href="{% url 'add_section' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i 
+        <a href="{% url 'add_section' %}" class="d-none d-sm-inline-block btn btn-sm btn-danger shadow-sm"><i 
             class="fas fa-columns fa-sm text-white-50"></i> Add New Section</a>
     </div>
 
@@ -37,7 +37,7 @@
     <!-- DataTales Example -->
     <div class="card shadow mb-4">
         <div class="card-header py-3">
-            <h6 class="m-0 font-weight-bold text-primary">All Sections</h6>
+            <h6 class="m-0 font-weight-bold text-danger">All Sections</h6>
         </div>
         <div class="card-body">
             <div class="table-responsive">
@@ -68,7 +68,7 @@
                                 <td>{{ section.class_name }}</td>
                                 <td>{{ section.description }}</td>
                                 <td>
-                                    <a href="{% url 'update_section' section.id %}" class="btn btn-sm btn-primary">Edit</a>
+                                    <a href="{% url 'update_section' section.id %}" class="btn btn-sm btn-danger">Edit</a>
                                     <button class="btn btn-sm btn-secondary" onclick="confirmDelete({{ section.id }})">Delete</button>
                                     <form id="delete-form-{{ section.id }}" action="{% url 'delete_section' section.id %}" method="POST" style="display: none;">
                                         {% csrf_token %}
