--- a/spms/administrator/templates/list_student_by_class.html
+++ b/spms/administrator/templates/list_student_by_class.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container-fluid">
-    <h1 class="h3 mb-4 text-gray-800">Add Student</h1>
+    <h1 class="h3 mb-4 text-gray-800">Search Student</h1>
 
     <!-- Display messages -->
     {% if messages %}
@@ -40,8 +40,10 @@
                     {% endif %}
                 </select>
             </div>
+        </div>
+        <div class="form-row">
             <div class="col-md-4 mb-3 mt-4">
-                <button type="submit" class="btn btn-primary">Search</button>
+                <button type="submit" class="btn btn-danger">Search</button>
             </div>
         </div>
     </form>
@@ -49,32 +51,60 @@
     <!-- DataTales Example -->
     <div class="card shadow mb-4">
         <div class="card-header py-3">
-            <h6 class="m-0 font-weight-bold text-primary">All Students</h6>
+            <h6 class="m-0 font-weight-bold text-danger">All Students</h6>
         </div>
         <div class="card-body">
             <div class="table-responsive">
                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                     <thead>
                         <tr>
-                            <th>Reg No#</th>
+                            <th>Roll No#</th>
                             <th>Name</th>
                             <th>Guardian Name</th>
-                            <th>Gender</th>
                             <th>Class & Section</th>
+                            <th>Enrollment Date</th>
+                            <th>Status</th>
                             <th>Action</th>
                         </tr>
                     </thead>
+                    <tfoot>
+                        <tr>
+                            <th>Roll No#</th>
+                            <th>Name</th>
+                            <th>Guardian Name</th>
+                            <th>Class & Section</th>
+                            <th>Enrollment Date</th>
+                            <th>Status</th>
+                            <th>Action</th>
+                        </tr>
+                    </tfoot>
                     <tbody>
                         {% for student in student_list %}
-                        <tr>
-                            <td>{{ student.student.registration_number }}</td>
-                            <td>{{ student.student.user.first_name }}</td>
-                            <td>{{ student.student.user.last_name }}</td>
-                            <td>{{ student.student.gender }}</td>
-                            <td>{{ student.roll_number }}</td>
-                            <td>{{ student.class_name.name }}</td>
-                            <td>{{ student.section.name }}</td>
-                        </tr>
+                            <tr>
+                                <td>{{ student.roll_number }}</td>
+                                <td>{{ student.student.first_name }} {{ student.student.last_name }}</td>
+                                <td>{{ student.student.student.family.guardian.user.first_name }} {{ student.student.student.family.guardian.user.last_name }}</td>
+                                <td>{{ student.class_name.name }} - {{ student.section.name }}</td>
+                                <td>{{ student.enrollment_date }}</td>
+                                <td>
+                                    {% if student.status == "active" %}
+                                        Active
+                                    {% elif student.status == "on_hold" %}
+                                        On Hold
+                                    {% elif student.status == "completed" %}
+                                        Completed
+                                    {% elif student.status == "removed" %}
+                                        Removed
+                                    {% elif student.status == "struck_off" %}
+                                        Struck Off
+                                    {% elif student.status == "expelled" %}
+                                        Expelled
+                                    {% else %}
+                                        Unknown Status
+                                    {% endif %}
+                                </td>
+                                <td><!-- Actions Here --></td>
+                            </tr>
                         {% endfor %}
                     </tbody>
                 </table>
