--- a/spms/home/templates/login.html
+++ b/spms/home/templates/login.html
@@ -67,7 +67,7 @@
                         <option value="Parent">Parent</option>
                     </select>
                 </div>
-                <button type="submit" class="btn btn-primary">Login</button>
+                <button type="submit" class="btn btn-danger">Login</button>
             </form>
         </div>
     </div>
